--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
   font-family: fantasy, cursive;
 }
 
-@media (max-width:768px) {
+@media (max-width: 768px) {
 .head { text-align: center;
 }
 }
@@ -29,20 +29,20 @@
 .task {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .task-row-wrapper {
   display: flex;
 }
 ul {
-  margin:0;
+  margin: 0;
   padding: 0px;
 }
 li, h3 {
-  list-style:none;
+  list-style: none;
 }
 input,button{
-  outline:none;
+  outline: none;
 }
 .button {
   background: none;
@@ -115,7 +115,7 @@ input,button{
   width: 226px;
 }
 .task-line .task-name-input {
-  width: 226px
+  width: 226px;
 }
 .button.delete .image {
   height: 2em;
@@ -128,20 +128,20 @@ input,button{
 
 /* Completed */
 #completed-tasks .task-name {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .task-line .task-name-input {
-  display:none
+  display: none;
 }
 
 .task-line.edit-mode .task-name-input {
-  display:inline-block;
-  width:224px
+  display: inline-block;
+  width: 224px;
 }
 
 .task-line.edit-mode .task-name {
-  display:none;
+  display: none;
 }
