--- a/style.css
+++ b/style.css
@@ -4,46 +4,58 @@
   color: #333;
   font-family: Lato, sans-serif;
 }
+
 .head {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
+
 .head__img {
   width: 100%;
 }
+
 .head .head__more-inf {
   font-family: fantasy, cursive;
 }
 
 @media (max-width: 768px) {
-.head { text-align: center;
+  .head { text-align: center;
+  }
 }
-}
+
 .todo {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
+
 .task {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
+
 .task-row-wrapper {
   display: flex;
 }
+
 ul {
   margin: 0;
   padding: 0px;
 }
-li, h3 {
+
+li, 
+h3 {
   list-style: none;
 }
-input,button{
+
+input,
+button {
   outline: none;
 }
+
 .button {
   background: none;
   border: 0px;
@@ -53,9 +65,11 @@ input,button{
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
+
 .button:hover {
   color: #3a3A3a;
 }
+
 /* Heading */
 .head-text {
   color: #333;
@@ -66,6 +80,7 @@ input,button{
   margin: 0;
   text-transform: uppercase;
 }
+
 .task[type="text"] {
   margin: 0;
   font-size: 18px;
@@ -78,6 +93,7 @@ input,button{
   font-family: Lato, sans-serif;
   color: #888;
 }
+
 .task[type="text"]:focus {
   color: #333;
 }
@@ -87,6 +103,7 @@ input,button{
   display: block;
   margin: 0 0 20px;
 }
+
 #todo__new-task {
   width: 318px;
 }
@@ -101,6 +118,7 @@ input,button{
   justify-content: space-between;
   align-items: center;
 }
+
 .task-line > * {
   vertical-align: middle;
 }
@@ -108,20 +126,24 @@ input,button{
 .task-line > .checkbox {
   margin: 0 10px;
 }
+
 .task-name {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
+
 .task-line .task-name-input {
   width: 226px;
 }
+
 .button.delete .image {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
+
 .button.delete .image:hover {
   transform: rotateZ(0);
 }
